--- a/www/css/sidebar.css
+++ b/www/css/sidebar.css
@@ -1,10 +1,3 @@
-html,
-body {
-    overflow-x: hidden;
-}
-body {
-    padding-top: 56px;
-}
 .offcanvas-collapse {
     position: fixed;
     top: 56px;
@@ -16,7 +9,7 @@ body {
     padding-left: 1rem;
     overflow-y: auto;
     visibility: hidden;
-    background-color: /*#343a40*//*#f8f9fa*/val(--vd-2);
+    background-color: /*#343a40*//*#f8f9fa*/ #0C2606;
     transition-timing-function: ease-in-out;
     transition-duration: .3s;
     transition-property: left, visibility;
