--- a/www/css/index.css
+++ b/www/css/index.css
@@ -45,8 +45,8 @@
 }
 
 html,
-body, * {
-    overflow-x: hidden; /*Toda sobra laterial da tela é ocultada*/
+body{
+	overflow-x: hidden; /*Toda sobra laterial da tela é ocultada*/
 }
 
 /*classes para setar cor com mesmo hexadecimal do logo do tg*/
@@ -73,4 +73,21 @@ body{
 
 #logoTGMenu{
 	margin: 5vh 0 0 0;
+}
+
+.tituloBarra{
+	margin-top: 5vh;
+	color: white;
+	align-items: center;
+	overflow-y: hidden;
+}
+
+
+/*Falta configurar um tamanho padrão para as img do menu
+*/
+.maxImgTitulo{
+	max-width:200px;
+    max-height:150px;
+    width: auto;
+	height: auto;
 }
