--- a/www/css/index.css
+++ b/www/css/index.css
@@ -58,9 +58,12 @@ header{
 footer{
 	background-color: #513f33;
 	background-color: #3b4835;
+	background-color: #2B5422;
 	height: 10vh;
 	width: 100vw;
 	z-index: 99999;
+	position: absolute;
+	
 }
 
 /*para nao ter scroll na tela do app*/
@@ -76,10 +79,14 @@ body{
 }
 
 .tituloBarra{
+	text-align: center;
+
 	margin-top: 5vh;
 	color: white;
 	align-items: center;
 	overflow-y: hidden;
+	font-size: 2em;
+	font-weight: 600;
 }
 
 
@@ -90,4 +97,11 @@ body{
     max-height:150px;
     width: auto;
 	height: auto;
+}
+
+#btnVoltar{
+	font-weight: bold;
+	color: white;
+	padding: 0 15px 0 10px;
+	align-items: center;
 }
