--- a/www/css/index.css
+++ b/www/css/index.css
@@ -105,3 +105,23 @@ body{
 	padding: 0 15px 0 10px;
 	align-items: center;
 }
+
+.containerCorrecao{
+	text-align: center;
+	margin: auto 5vw;
+	width: 100%;
+	margin-left: auto;
+	margin-right: auto;
+	align-items: center;
+}
+
+p{
+	text-align: justify;
+	width: 90%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+p:first-child{
+	margin-top: 5vh;
+}
