--- a/www/css/index.css
+++ b/www/css/index.css
@@ -109,10 +109,17 @@ body{
 .containerCorrecao{
 	text-align: center;
 	margin: auto 5vw;
-	width: 100%;
+	width: 95vw;
 	margin-left: auto;
 	margin-right: auto;
 	align-items: center;
+}
+
+.rowCorrecao{
+	width: 80vw;
+	align-items: center;
+	text-align: center;
+	margin: 0 auto;
 }
 
 p{
@@ -124,4 +131,12 @@ p{
 
 p:first-child{
 	margin-top: 5vh;
+}
+
+.imgIconeMesa{
+	max-width: 20vw;
+}
+
+.paddingDiv{
+	padding: 2rem 1rem;
 }
