--- a/www/css/index.css
+++ b/www/css/index.css
@@ -173,3 +173,13 @@ ul{
 	width: 20vw;
 	text-align: center;
 }
+
+#containerImg{
+	text-align: center;
+}
+
+#imgCentralTexto{
+	max-width: 75vw;
+	margin: 2vh auto 4vh;
+	border: 2px solid black;
+}
